fixed spacing and list page view

--- a/thriftify/src/pages/ListPage.css
+++ b/thriftify/src/pages/ListPage.css
@@ -1,162 +1,50 @@
-.offers-title {
-    color: #3C0E61;
-    font-size: 35px;
-    margin-top: 60px;
-    background-color: #f5f5f5;
-  }
+.item-container {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .title-container {
-    width: 100%;
-    height: 70px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    padding-top: 20px;
-    color: #3C0E61;
-  }
+.item-container .row.item {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
 
-  .offers-container {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f5f5f5;
-    color: #3C0E61;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-    width: 100%;
-    padding-top: 60px;
-    padding-bottom: 20px;
-  }
+.item-container .row.item .col {
+  width: 25px;
+  height: 40px
+  /* margin-bottom: 10px; */
+}
 
-  .centered-box {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
+/* .item-container .row .col .sold-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+} */
 
-  .blank-card {
-    background-color: rgb(231, 231, 241);
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 8px;
-    color: #3C0E61;
-    height: 250px;
-    width: 250px;
-  }
+/* .item-container .row .col .sold-btn:focus,
+.item-container .row .col .sold-btn:active {
+  outline: none;
+  width: 40px;
+  height: 40px;
+} */
 
-  .card {
-    background-color: rgb(231, 231, 241);
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 10px;
-    height: 300px;
-    width: 300px;
-    color: #3C0E61;
-  }
+.item-container .row .col .sold-btn {
+  outline: none;
+  width: 55px;
+  height: 55px;
+  margin-top: -15px;
+}
 
-  .dropdownMenuButton {
-    background-color: transparent;
-  }
-
-  button:focus,
-  button:active {
-    outline: none;
-    box-shadow: none;
-    background-color: #f5f5f5;
-  }
-
-  .card-btn {
-    color: #3C0E61;
-    border-radius: 5px;
-    outline: none;
-    box-shadow: none;
-    background-color: transparent;
-    background: transparent;
-    border: none;
-    font-size: 24px;
-  }
-
-  .prev {
-    margin-left: 10px;
-  }
-
-  .next {
-    margin-right: 10px;
-  }
-
-  .store-list-container {
-    height: 280px;
-    width: 300px;
-    max-height: 1200px;
-    overflow-y: auto;
-    margin-bottom: 40px;
-    align-items: center;
-  }
-
-  .store-list {
-    height: 80px;
-    padding-right: 15px;
-  }
-
-  .matches-header {
-    font-size: 12px;
-    margin-left: 30px;
-  }
-
-  .dropdown-menu {
-    margin-left: 20px;
-    font-size: 12px;
-  }
-
-  .row-1 {
-    max-height: 130px;
-  }
-
-  .store-item {
-    height: 80px;
-    background-color: rgb(231, 231, 241);
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: calc(100%-20px);
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-  }
-
-  .card-body {
-    padding: 15px;
-  }
-
-  .store-price {
-    padding-top: 20px;
-    padding-right: 15px;
-    margin-left: 10px;
-    font-size: 20px
-  }
-
-  .store-distance {
-    font-size: 16px;
-    text-align: right;
-    padding-right: 10px;
-
-  }
-
-  .store-name {
-    padding-top: 5px;
-    text-align: right;
-    font-weight: bold;
-    font-size: 18px;
-    padding-right: 10px;
-  }
-
-  .store-list {
-    padding-right: 15px;
-  }
-
-  .row {
-    display: flex;
-    align-items: center;
-  }
-  
+.item-container .row .col .sold-btn-img {
+  width: 40px;
+  height: 40px;
+  /* margin-top: -50px; */
+}
